--- a/src/components/Journals/journals-small.scss
+++ b/src/components/Journals/journals-small.scss
@@ -1,94 +1,97 @@
-@use '../../styling/abstracts' as *;
+@use "../../styling/abstracts" as *;
 
 .journals-small {
-    padding: calc($magic-number) calc($magic-number / 4);
+  @include for-laptop-sm-and-up {
+    display: none;
+  }
+  padding: calc($magic-number) calc($magic-number / 4);
 
-    .headline {
-        margin-bottom: calc($magic-number / 2);
-    }
+  .headline {
+    margin-bottom: calc($magic-number / 2);
+  }
+
+  @include for-tablet-and-up {
+    padding: $magic-number calc($magic-number / 2);
+  }
+
+  &__year {
+    text-align: right;
+    margin-bottom: $magic-number;
+  }
+
+  &__container {
+    margin-bottom: $magic-number;
+  }
+
+  &__grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: calc($magic-number / 2);
 
     @include for-tablet-and-up {
-        padding: $magic-number calc($magic-number / 2);
+      grid-template-columns: 1fr 1fr;
     }
-
-    &__year {
-        text-align: right;
-        margin-bottom: $magic-number;
-    }
-
-    &__container {
-        margin-bottom: $magic-number;
-    }
-
-    &__grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: calc($magic-number / 2);
-
-        @include for-tablet-and-up {
-            grid-template-columns: 1fr 1fr;
-        }
-    }
+  }
 }
 
 .journal-small {
+  position: relative;
+  display: block;
+  min-height: calc($magic-number * 2);
+  height: calc($magic-number * 2);
+  max-height: calc($magic-number * 2);
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+
+  article {
     position: relative;
-    display: block;
-    min-height: calc($magic-number * 2);
+  }
+
+  &__name {
+    margin-bottom: calc($magic-number / 4);
+  }
+
+  &__image-wrapper {
+    position: absolute;
     height: calc($magic-number * 2);
-    max-height: calc($magic-number * 2);
+    width: 80%;
+    top: 50%;
+    right: 0;
+    background-color: $background-color;
 
-    &:last-of-type {
-        margin-bottom: 0;
+    transform: translate(0%, -50%);
+    z-index: -2;
+    overflow: hidden;
+    border-radius: 0 $border-radius $border-radius 0;
+
+    &:after {
+      content: "";
+      top: 0px;
+      left: 0px;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: linear-gradient(
+        90deg,
+        $background-color 2.5%,
+        rgba(0, 0, 0, 0) 90%
+      );
     }
 
-    article {
-        position: relative;
+    .asset {
+      position: absolute;
+      top: 1px;
+      left: 1px;
+      object-fit: cover;
+      width: calc(100% - 2px);
+      height: calc(100% - 2px);
+      position: relative;
+      opacity: 1;
     }
-
-    &__name {
-        margin-bottom: calc($magic-number / 4);
-    }
-
-    &__image-wrapper {
-        position: absolute;
-        height: calc($magic-number * 2);
-        width: 80%;
-        top: 50%;
-        right: 0;
-        background-color: $background-color;
-
-        transform: translate(0%, -50%) translateZ(0);
-        overflow: hidden;
-        border-radius: 0 $border-radius $border-radius 0;
-
-        &:after {
-            content: "";
-            top: 0px;
-            left: 0px;
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            background: linear-gradient(
-                90deg,
-                $background-color 2.5%,
-                rgba(0, 0, 0, 0) 90%
-            );
-        }
-
-        .asset {
-            display: flex;
-            position: absolute;
-            top: 1px;
-            left: 1px;
-            object-fit: cover;
-            width: calc(100% - 2px);
-            height: calc(100% - 2px);
-            position: relative;
-            opacity: 1;
-        }
-    }
+  }
 }
